--- a/rock.css
+++ b/rock.css
@@ -15,7 +15,7 @@ body {
   
   }
   
-  li a {
+  li a {outline: none;
       font-family: 'Aldrich';
     display: -webkit-box;
     color: rgb(28, 165, 219);
@@ -34,12 +34,12 @@ body {
 
   #sound {
 
-
+    outline: none;
         font-family: 'Anton';
         position: absolute;
     top: 50%;
-    left: 40%;
-    font-size: 35px;
+    left: 34%;
+    font-size: 55px;
           color: #494949 !important;
           text-transform: uppercase;
           text-decoration: none;
@@ -49,14 +49,17 @@ body {
           display: inline-block;
           transition: all 0.4s ease 0s;
         
-
+          outline: none;
       }
 
-      #player {
+      #player {outline: none;
         position: absolute;
-        top: 80%;
-        left: 41%;
-        padding: 25px 60px;
+        top: 75%;
+        left: 33%;
+       margin: 30px 30px;
+       padding: 30px 30px;
+        
+       
       }
 
      /* #discover {
@@ -81,11 +84,12 @@ body {
         font-family: 'Anton';
         position: absolute;
     top: 20%;
-    left: 20%;
+    left: 27%;
     font-size: 35px;
       }
      
 #end {
+  
   color: rgb(177, 30, 30) ;
 
   font-family: 'Anton';
@@ -111,21 +115,22 @@ font-size: 98px;
 
 
       #discover {
+        outline: none;
         font-family: 'Anton';
         border: none;
-        background: #954ca3;
+        background: #ce2831;
         color: #ffffff !important;
         font-weight: 100;
         padding: 20px;
         text-transform: uppercase;
         border-radius: 6px;
         display: inline-block;
-        transition: all 0.3s ease 0s;
-
+        transition: all 0.1s ease 0s;
+opacity: 40%;
 
         position: absolute;
-        top: 35%;
-        left:43%;
+        top: 33%;
+        left:31%;
         font-size: 55px;
       }
 
@@ -135,7 +140,7 @@ font-size: 98px;
           letter-spacing: 3px;
           background: none;
           box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-          
+          opacity: 90%;
           transition: all 0.3s ease 0s;
           }
 
@@ -145,3 +150,43 @@ font-size: 98px;
             border-color: #353432 !important;
             transition: all 0.4s ease 0s;
             }
+
+
+
+            .names , #name1 {
+
+
+              outline: none;
+        font-family: 'Anton';
+        position: absolute;
+    top: 50%;
+    left: 70%;
+    font-size: 30px;
+          color: #494949 !important;
+          text-transform: uppercase;
+          text-decoration: none;
+          background: #ffffff;
+          padding: 11px 20px;
+          border: 4px solid #494949 !important;
+          display: inline-block;
+          transition: all 0.4s ease 0s;
+        
+          outline: none;
+            }
+             #name2 {        
+    top: 60%;
+    left: 70%;
+    font-size: 30px; 
+            }
+            #name3 {
+              top: 60%;
+              left: 80%;
+              font-size: 20px;
+               
+                      }
+                      #name4 {
+                        top: 50%;
+                        left: 80%;
+                        font-size: 20px;
+                         
+                                }
