--- a/rock.css
+++ b/rock.css
@@ -174,19 +174,52 @@ opacity: 40%;
           outline: none;
             }
              #name2 {        
-    top: 60%;
+    top: 40%;
     left: 70%;
     font-size: 30px; 
             }
             #name3 {
-              top: 60%;
-              left: 80%;
-              font-size: 20px;
+              top: 30%;
+              left: 70%;
+              font-size: 30px;
                
                       }
                       #name4 {
-                        top: 50%;
-                        left: 80%;
-                        font-size: 20px;
+                        top: 20%;
+                        left: 70%;
+                        font-size: 30px;
                          
+                                }
+
+                                #namek1 {
+                                  color: #ffffff !important;
+                                  position: absolute;
+                                  font-family: 'Anton';
+                                  top: 48%;
+                                  left: 79%;
+                                  font-size: 35px;
+                                }
+                                #namek2 {
+                                  color: #ffffff !important;
+                                  position: absolute;
+                                  font-family: 'Anton';
+                                  top: 38%;
+                                  left: 79%;
+                                  font-size: 35px; 
+                                }
+                                #namek3 {
+                                  color: #ffffff !important;
+                                  position: absolute;
+                                  font-family: 'Anton';
+                                  top: 28%;
+                                  left: 79%;
+                                  font-size: 35px; 
+                                }
+                                #namek4 {
+                                  color: #ffffff !important;
+                                  position: absolute;
+                                  font-family: 'Anton';
+                                  top: 18%;
+                                  left: 79%;
+                                  font-size: 35px; 
                                 }
